# sphinxy

./: .buildinfo  .gitignore  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sphinxy.html  sphinxy.riddle.html  sphinxy.sphinx.html
.doctrees/: environment.pickle  index.doctree  modules.doctree  sphinxy.doctree  sphinxy.riddle.doctree  sphinxy.sphinx.doctree
.github/workflows/: docs.yaml
docs/: conf.py  index.rst  modules.rst
