[tool.poetry]
name = "sphinxy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^7.1.2"
sphinx-rtd-theme = "^1.2.2"
furo = "^2023.7.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
